# dcc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.py  cnb.bat  cnb.sh  cnp.bat  cnp.sh  pyproject.toml  reset.bat  reset.sh  run.bat  setup-vcpkg.bat  setup-vcpkg.sh  tree.txt  update_package.bat  update_package.sh
cpp/: CMakeLists.txt
cpp/bindings/: point_bindings.cpp
cpp/include/dcc_core/: collections.h  point.h  vector.h
cpp/src/: collections.cpp  point.cpp  vector.cpp
docs/: cpp_ai.ipynb  cpp_mine.ipynb  demo.ipynb  devops.ipynb  notes_mine.ipynb  tmp.txt
examples/cpp/: CMakeLists.txt  demo.cpp
src/: main.cpp
src/dcc/: __init__.py  reset_tools.py
tests/cpp/: CMakeLists.txt  collections_test.cpp  point_test.cpp  vector_test.cpp
