[tool.poetry]
name = "dcc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

include = [
    # Source files for C extensions must be included in the source distribution.
    { path = "cpp/bindings/*.*", format = "sdist" },
    { path = "cpp/include/dcc_core/*.*", format = "sdist" },
    { path = "cpp/src/*.*", format = "sdist" },
    # C extensions must be included in the wheel distribution.
    { path = "src/dcc/*.pyd", format = "wheel" },
    { path = "src/dcc/*.so", format = "wheel" },
]
exclude = [
    "cpp/*",
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.5.1"


[build-system]
requires = ["poetry-core", "cmake", "ninja"]
build-backend = "poetry.core.masonry.api"
